--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ header {
 .hero {
     height: 70vh;
     background: linear-gradient(rgba(26, 26, 26, 0.7), rgba(26, 26, 26, 0.8)), 
-                url('https://images.unsplash.com/photo-1513104890138-7c749659a591?ixlib=rb-4.0.3&auto=format&fit=crop&w=2100&q=80');
+                url('pizza\ uno\ fondo.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -738,4 +738,5 @@ footer {
     .menu-divider::after {
         display: none;
     }
+
 }
