--- a/styles.css
+++ b/styles.css
@@ -740,3 +740,45 @@ footer {
     }
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.map-container {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.map-container iframe {
+    width: 100%;
+    height: 450px; /* asegurate que tenga altura real */
+    border: 0;
+    display: block;
+}
